# Mali-Yogesh-Cyber-Forensic-Tool--Bltool-

./: CMakeLists-GUI.txt  CMakeLists.txt  CMakeLists_NEW.txt  IMPLEMENTATION_SUMMARY.md  INTEGRITY_VERIFICATION.md  LICENSE  README.md  build_out.txt
